Add vm creation

--- a/WebProjectAzure/Views/Shared/_Layout.cshtml
+++ b/WebProjectAzure/Views/Shared/_Layout.cshtml
@@ -25,9 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AbonnementModels" asp-action="Index">Abonnements</a>
-                        </li>
+                        @if (Context.User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="AbonnementModels" asp-action="Index">Abonnements</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
