update from gitlab

--- a/WebProjectAzure/Views/AbonnementModels/Create.cshtml
+++ b/WebProjectAzure/Views/AbonnementModels/Create.cshtml
@@ -22,10 +22,18 @@
                 <input asp-for="Duree" class="form-control" />
                 <span asp-validation-for="Duree" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">
                 <label asp-for="TarifMensuel" class="control-label"></label>
                 <input asp-for="TarifMensuel" class="form-control" />
                 <span asp-validation-for="TarifMensuel" class="text-danger"></span>
+            </div>-->
+            <div class="form-group">
+                <label asp-for="TarifMensuel" class="control-label"></label>
+                <select class="form-control" id="TarifMensuel" name="TarifMensuel">
+                    <option>10</option> 
+                    <option>20</option> 
+                    <option>30</option> 
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
