--- a/WebProjectAzure/Views/AbonnementModels/Edit.cshtml
+++ b/WebProjectAzure/Views/AbonnementModels/Edit.cshtml
@@ -4,41 +4,59 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<div class="d-flex justify-content-center my-5">
+    <div class="row">
+        <h1 class="col-md-12 border-primary">Edit VM</h1>
+    </div>
+</div>
 
-<h4>AbonnementModel</h4>
-<hr />
-<div class="row">
+<div class="row justify-content-center mt-3">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="DateDebut" class="control-label"></label>
                 <input asp-for="DateDebut" class="form-control" />
                 <span asp-validation-for="DateDebut" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Duree" class="control-label"></label>
                 <input asp-for="Duree" class="form-control" />
                 <span asp-validation-for="Duree" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="TarifMensuel" class="control-label"></label>
-                <input asp-for="TarifMensuel" class="form-control" />
-                <span asp-validation-for="TarifMensuel" class="text-danger"></span>
+                <select class="form-control" id="TarifMensuel" name="TarifMensuel">
+                    <option>10</option>
+                    <option>20</option>
+                    <option>30</option>
+                </select>
             </div>
-            <div class="form-group">
-                <label asp-for="Mail" class="control-label"></label>
-                <input asp-for="Mail" class="form-control" />
-                <span asp-validation-for="Mail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="row form-group mt-2">
+                <div class="col-5"></div>
+
+                <input type="submit" value="Save" class="col-2 btn btn-primary" />
+
+                <div class="col-5"></div>
             </div>
         </form>
     </div>
 </div>
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
 
 <div>
     <a asp-action="Index">Back to List</a>
