--- a/WebProjectAzure/Views/Shared/_Layout.cshtml
+++ b/WebProjectAzure/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - jeu</title>
+    <title>@ViewData["Title"] - Sup de Vinci Gaming</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/jeu.styles.css" asp-append-version="true" />
@@ -31,7 +31,7 @@
                         @if (Context.User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="AbonnementModels" asp-action="Index">Abonnements</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="AbonnementModels" asp-action="Index">Subscriptions</a>
                             </li>
                         }
                     </ul>
@@ -40,7 +40,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="mx-5">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -48,7 +48,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - jeu - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - Sup de Vinci Gaming - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
